fix button bar on small screens (mde in/outdent, find)

--- a/src/main.scss
+++ b/src/main.scss
@@ -59,32 +59,32 @@ body, html {
 }
 
 .editor-toolbar.fullscreen {
-  @media screen and (max-width: 525px) {
+  @media screen and (max-width: 715px) {
     height: 80px !important;
   }
-  @media screen and (min-width: 526px) {
+  @media screen and (min-width: 716px) {
     height: 50px !important;
   }
 }
 
 .EasyMDEContainer {
   .CodeMirror-fullscreen {
-    @media screen and (max-width: 525px) {
+    @media screen and (max-width: 715px) {
       top: 80px !important;
 
       .CodeMirror-scroll {
         min-height: unset !important;
       }
     }
-    @media screen and (min-width: 526px) {
+    @media screen and (min-width: 716px) {
       top: 50px !important;
     }
   }
   .editor-preview-side {
-    @media screen and (max-width: 525px) {
+    @media screen and (max-width: 715px) {
       top: 80px !important;
     }
-    @media screen and (min-width: 526px) {
+    @media screen and (min-width: 716px) {
       top: 50px !important;
     }
   }
